Muestra de objetos arreglada

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       </div>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-2" id="btnPersonajes">Personajes</a></li>
-        <li><a href="#" class="nav-link px-2" id="btnLibros">Libros</a></li>
-        <li><a href="#" class="nav-link px-2" id="btnCasas">Casas</a></li>
-        <li><a href="#" class="nav-link px-2" id="btnHechizos">Hechizos</a></li>
-        <li><a href="#" class="nav-link px-2" id="btnVerTodo">Ver Todo</a></li>
-      </ul>
+        <li><a href="#" class="nav-link px-2 btnCategoria" value="characters">Personajes</a></li>
+        <li><a href="#" class="nav-link px-2 btnCategoria" value="books">Libros</a></li>
+        <li><a href="#" class="nav-link px-2 btnCategoria" value="houses">Casas</a></li>
+        <li><a href="#" class="nav-link px-2 btnCategoria" value="spells">Hechizos</a></li>
+        <li><a href="#" class="nav-link px-2 btnCategoria" value="">Ver Todo</a></li>
+    </ul>
 
       <div class="col-md-3 text-end">
         <button type="button" class="btn btn-outline-primary me-2">Login</button>
@@ -36,10 +36,7 @@
   </div>
 <main>
   <h1>BIENVENIDOS A MI PÁGINA</h1>
-  <div id="contenedorPersonajes"></div>
-  <div id="contenedorLibros"></div>
-  <div id="contenedorCasas"></div>
-  <div id="contenedorHechizos"></div>
+  <div id="contenedorGeneral"></div>
 </main>
 
 
