Listas completas con objetos

--- a/index.html
+++ b/index.html
@@ -36,6 +36,27 @@
   </div>
 <main>
   <h1>BIENVENIDOS A MI PÁGINA</h1>
+  <section class="contenedorCarrusel">
+    <div class="carrusel">
+      <div class="slide">
+        <img src="img/img carrusel 1.jpg" alt="">
+      </div>
+      <div class="slide">
+        <img src="img/img carrusel 2.jpg" alt="">
+      </div>
+      <div class="slide" id="slide3">
+        <img src="img/img carrusel 3.jpg" alt="" >
+      </div>
+      <div class="slide" id="slide4">
+        <img src="img/img carrusel 4.jpg" alt="">
+      </div>
+    </div>
+    <button type="button" class="fa-solid fa-circle-chevron-left btnsCarrusel"id="btnAnterior"></button>
+    <button type="button" class="fa-solid fa-circle-chevron-right btnsCarrusel" id="btnSiguiente"></button>
+  </section>
+
+
+
   <div id="contenedorGeneral"></div>
 </main>
 
@@ -56,6 +77,10 @@
     </symbol>
     <symbol id="rayo" viewBox="0 0 16 16">
       <path d="M11.251.068a.5.5 0 0 1 .227.58L9.677 6.5H13a.5.5 0 0 1 .364.843l-8 8.5a.5.5 0 0 1-.842-.49L6.323 9.5H3a.5.5 0 0 1-.364-.843l8-8.5a.5.5 0 0 1 .615-.09z"/>
+    </symbol>
+    <symbol id="flechaI" viewBox="0 0 16 16">
+      <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0m3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5z"/>
+
     </symbol>
   </svg>
 
@@ -79,7 +104,7 @@
 
 
 
-
+    <script src="https://kit.fontawesome.com/35204142df.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </body>
