--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <meta name="theme-color" content="#712cf9">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Protest+Revolution&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
@@ -33,14 +36,14 @@
         </ul>
 
         <div class="col-md-3 text-end">
-          <button type="button" class="btn btn-outline-dark me-2">Login</button>
-          <button type="button" class="btn btn-dark">Sign-up</button>
+          <button type="button" id="btnFavoritos" class="btn btn-dark btn-md">FAVORITOS</button>
+          <button type="button" id="btn btnModo" class="btn btn-dark btn-md">MODO</button>
         </div>
       </header>
     </div>
   </header>
   <main>
-    <h1>Harry Potter Fan Page</h1>
+    <h1>HARRY POTTER FAN PAGE</h1>
     <div class="contenedorCarousel">
       <div id="carousel" class="carousel slide" data-bs-ride="true">
         <div class="carousel-inner">
@@ -124,7 +127,7 @@
 
 
 
-
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://kit.fontawesome.com/35204142df.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
