Cambios de estilo

--- a/index.html
+++ b/index.html
@@ -16,34 +16,34 @@
 </head>
 
 <body>
-  <header>
-    <div class="container">
-      <header
-        class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-        <div class="col-md-3 mb-2 mb-md-0">
-          <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-            <svg class="bi" width="50" height="45" role="img" aria-label="Rayo">
-              <use xlink:href="#rayo" />
-            </svg>
-          </a>
-        </div>
 
-        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="#" id="txtCategorias" class="nav-link px-2 btnCategoria" value="characters">PERSONAJES</a></li>
-          <li><a href="#" id="txtCategorias" class="nav-link px-2 btnCategoria" value="books">LIBROS</a></li>
-          <li><a href="#" id="txtCategorias" class="nav-link px-2 btnCategoria" value="houses">CASAS</a></li>
-          <li><a href="#" id="txtCategorias" class="nav-link px-2 btnCategoria" value="spells">HECHIZOS</a></li>
-        </ul>
+  <div class="container">
+    <header
+      class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-5 ">
+      <div class="col-md-3 mb-2 mb-md-0">
+        <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+          <p class="HP">HP</p>
+          <svg class="bi rayo" width="50" height="45" role="img" aria-label="Rayo">
+            <use xlink:href="#rayo" />
+          </svg>
+        </a>
+      </div>
 
-        <div class="col-md-3 text-end">
-          <button type="button" id="btnFavoritos" class="btn btn-dark btn-md">FAVORITOS</button>
-          <button type="button" id="btn btnModo" class="btn btn-dark btn-md">MODO</button>
-        </div>
-      </header>
-    </div>
-  </header>
+      <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 ">
+        <li><a href="#" id="txtCategorias" class="nav-link px-2 btnCategoria" value="characters">PERSONAJES</a></li>
+        <li><a href="#" id="txtCategorias" class="nav-link px-2 btnCategoria" value="books">LIBROS</a></li>
+        <li><a href="#" id="txtCategorias" class="nav-link px-2 btnCategoria" value="houses">CASAS</a></li>
+        <li><a href="#" id="txtCategorias" class="nav-link px-2 btnCategoria" value="spells">HECHIZOS</a></li>
+      </ul>
+
+      <div class="col-md-3 text-end p-3">
+        <button type="button" id="btnFavoritos" class="btn btn-dark btn-md">FAVORITOS</button>
+        <button type="button" id="btnModo" class="btn btn-dark btn-md">MODO</button>
+      </div>
+    </header>
+  </div>
   <main>
-    <h1>HARRY POTTER FAN PAGE</h1>
+    <!-- <h1>HARRY POTTER FAN PAGE</h1> -->
     <div class="contenedorCarousel">
       <div id="carousel" class="carousel slide" data-bs-ride="true">
         <div class="carousel-inner">
