Funcion eliminar Favorito

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
     </header>
   </div>
   <main>
-    <!-- <h1>HARRY POTTER FAN PAGE</h1> -->
     <div class="contenedorCarousel">
       <div id="carousel" class="carousel slide" data-bs-ride="true">
         <div class="carousel-inner">
@@ -70,7 +69,7 @@
         </button>
       </div>
     </div>
-
+    <div id="contenedorTitulo"></div>
     <div id="contenedorGeneral"></div>
   </main>
 
