--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
 
       <div class="col-md-3 text-end p-3">
         <button type="button" id="btnFavoritos" class="btn btn-dark btn-md">FAVORITOS</button>
-        <button type="button" id="btnModo" class="btn btn-dark btn-md">MODO</button>
       </div>
     </header>
   </div>
   <main>
-    <div class="contenedorCarousel">
+    <div id="contenedorCarrusel" class="contenedorCarousel">
       <div id="carousel" class="carousel slide" data-bs-ride="true">
         <div class="carousel-inner">
           <div class="carousel-item active">
