--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <title>Document</title>
 </head>
 
-<body>
+<body">
 
   <div class="container">
     <header
@@ -106,20 +106,8 @@
             <use xlink:href="#rayo" />
           </svg>
         </a>
-        <span class="mb-3 mb-md-0 text-body-secondary"> Harry Potter Fan Page</span>
+        <span class="mb-3 mb-md-0 text-body-secondary txtFooter"> Harry Potter Fan Page</span>
       </div>
-
-      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
-              <use xlink:href="#twitter" />
-            </svg></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
-              <use xlink:href="#instagram" />
-            </svg></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
-              <use xlink:href="#facebook" />
-            </svg></a></li>
-      </ul>
     </footer>
   </div>
 
