--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Protest+Revolution&display=swap" rel="stylesheet">
-
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Harry Potter</title>
 </head>
 
 <body">
@@ -22,7 +25,7 @@
       class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-5 ">
       <div class="col-md-3 mb-2 mb-md-0">
         <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-          <p class="HP">HP</p>
+          <p id="hp" class="HP animate__animated">HP</p>
           <svg class="bi rayo" width="50" height="45" role="img" aria-label="Rayo">
             <use xlink:href="#rayo" />
           </svg>
